Wed Aug 12 07:41:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_compatible): If a string is empty and
	  other's encoding is US-ASCII, returns the empty string's encoding.
	  [ruby-list:46274]

Wed Aug 12 07:38:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (is_data_encoding): fix condition.

	* encoding.c (enc_capable): ditto.

Tue Aug 11 23:12:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (complete_frags): Monday must be suitable for %W's
	  default day.

Tue Aug 11 21:42:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (num_divmod): fixed rdoc.  [ruby-core:24862]

Mon Aug 10 21:45:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_path2class): no deprecation.

Mon Aug 10 10:57:59 2009  Narihiro Nakamura  <authorNari@gmail.com>

	* gc.c: reject unused longlife gc. longlife gc target is longlife
	  NODE by method table and vm inline cache. but, fixed it at
	  r24085, r24128. so I rejected longlife gc.

	* debug.c: ditto.

	* include/ruby/intern.h: ditto.

	* include/ruby/ruby.h: ditto.

	* iseq.c: ditto.

	* node.h: ditto.

	* vm_insnhelper.c: ditto.

	* vm_insnhelper.h: ditto.

Mon Aug 10 06:55:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (class2path, w_unique, w_extended, w_class, w_uclass):
	  deal with non-ascii class path.  [ruby-core:24790]

	* marshal.c (r_unique, path2class, path2module, obj_alloc_by_path),
	  (r_object0): ditto.

	* variable.c (rb_path_to_class): new encoding-aware function to
	  get a class from its name.

Sun Aug  9 21:14:03 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb (search_tclConfig): last change isn't enough.
	  fixed it.

Sun Aug  9 16:36:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ruby.imp): excluded prelude.o to get rid of circular
	  dependency.  [ruby-dev:39052]

Sun Aug  9 14:49:24 2009  Yusuke Endoh  <mame@tsg.ne.jp>
